# Privision

./: .gitignore  API_README.md  INSTALL.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  test_api_client.py
src/: __init__.py  api_server.py  batch.py  bbox_calculator.py  debug_visualizer.py  example_batch.py  main.py  main_smart.py  ocr_detector.py  phone_detector.py  precise_locator.py  quick_test.py  server.py  task_queue.py  terminal_ui.py  test_phone_filter.py  test_phone_positions.py  test_single_frame.py  video_processor.py  video_processor_smart.py
src/api/: task_queue.py
src/config/: args.py
src/core/: __init__.py  ocr_detector.py  phone_detector.py  precise_locator.py  video_processor.py
src/privision/: __init__.py  batch.py
src/privision/core/: video_processor.py
src/privision/test/: test_ocr_call_count.py
src/test/: test_batch.py  test_ocr_and_detector.py  test_ocr_call_count.py  test_phone_filter.py  test_phone_positions.py  test_single_frame.py
src/ui/: progress.py  rich_ui.py  visualizer.py
