[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videophone-mask"
version = "1.0.0"
description = "视频手机号脱敏工具 - 基于PaddleOCR的手机号识别与打码系统"
authors = [{name = "0xyk3r"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["video", "ocr", "phone-number", "mask", "blur", "privacy"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "paddlepaddle>=2.5.0",
    "paddleocr>=2.7.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.4.0",
    "python-multipart>=0.0.6",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.scripts]
videophone-mask = "src.main:main"
videophone-server = "src.server:start_server"
videophone-batch = "src.batch:main"

[project.urls]
Homepage = "https://github.com/0xyk3r/VideoPhoneMask"
Repository = "https://github.com/0xyk3r/VideoPhoneMask"
Issues = "https://github.com/0xyk3r/VideoPhoneMask/issues"

[tool.setuptools]
packages = ["src", "src.api", "src.config", "src.core", "src.ui", "src.test"]

[tool.setuptools.package-data]
src = ["*.txt", "*.md"]
